--- a/appinfo.json
+++ b/appinfo.json
@@ -10,7 +10,6 @@
         "media": [
             {
                 "file": "images/menu_icon.png",
-                "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
                 "type": "png"
             },
@@ -28,10 +27,16 @@
                 "file": "fonts/UbuntuMono-Regular.ttf",
                 "name": "MONO_FONT_14",
                 "type": "font"
+            },
+            {
+                "file": "images/rss-icon.png",
+                "menuIcon": true,
+                "name": "IMAGES_RSS_ICON_PNG",
+                "type": "png"
             }
         ]
     },
-    "shortName": "RSS Spreeder",
+    "shortName": "Feed Spreeder",
     "uuid": "08a79afd-d6d4-4186-a474-c6e8b7bfb185",
     "versionCode": 1,
     "versionLabel": "1.0",
